--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "bootstrap": "^5.1.3"
+        "bootstrap": "^5.1.3",
+        "debugbar": "^0.0.1"
     }
 }
